force-app/main/default/objects/Case/fields/Affected_Module__c.field-meta.xml
<CustomField>
    <fullName>Affected_Module__c</fullName>
    <description>Catalyst Platform module(s) affected by this case. Used for skills-based routing to technical support queues and for product area reporting. Req: MKT-REQ-EXP-007.</description>
    <label>Affected Module</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Intelligence</fullName>
            </value>
            <value>
                <fullName>Audience Studio</fullName>
            </value>
            <value>
                <fullName>Attribution Engine</fullName>
            </value>
            <value>
                <fullName>Content Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>