force-app/main/default/objects/Case/fields/Auto_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Link_Status__c</fullName>
    <description>Indicates whether the case was automatically linked to an account/contact by CaseTriggerHandler email domain matching. Pending Manual Review cases surface in the service manager queue for manual resolution. Req: MKT-REQ-SRVC-002.</description>
    <label>Auto-Link Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linked</fullName>
            </value>
            <value>
                <fullName>Pending Manual Review</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>