force-app/main/default/objects/Case/fields/CSAT_Sent__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the post-close CSAT survey flow dispatches a Feedback_Survey__c record. Required before closing a case (enforced by Case_CSATGate validation rule). Req: MKT-REQ-SRVC-006.</description>
    <label>CSAT Sent</label>
    <type>Checkbox</type>
</CustomField>