force-app/main/default/objects/Case/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <description>Summary of how the case was resolved. Required before setting Status to Resolved (enforced by Case_ResolutionSummaryRequired validation rule). Used for knowledge article seeding and SLA reporting. Req: MKT-REQ-SRVC-005.</description>
    <label>Resolution Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>