force-app/main/default/objects/Case/fields/SLA_Tier_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>SLA_Tier_at_Creation__c</fullName>
    <description>Snapshot of Account.Subscription_Tier__c at the time the case was created. Populated by CaseTriggerHandler on insert (before save). Preserved for SLA reporting accuracy even if the account tier changes mid-case. Req: MKT-REQ-SRVC-007.</description>
    <label>SLA Tier at Creation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>