force-app/main/default/objects/Case/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <description>Billing and invoicing cases — payment disputes, subscription changes, and billing queries.</description>
    <label>Billing</label>
    <businessProcess>Catalyst_Support_Process</businessProcess>
</RecordType>