force-app/main/default/objects/Case/recordTypes/Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>Feature_Request</fullName>
    <active>true</active>
    <description>Feature requests — product enhancement suggestions submitted by customers via the portal or support team.</description>
    <label>Feature Request</label>
    <businessProcess>Catalyst_Support_Process</businessProcess>
</RecordType>