force-app/main/default/objects/Case/recordTypes/General_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>General_Enquiry</fullName>
    <active>true</active>
    <description>General enquiries — how-to questions, documentation requests, and non-urgent support.</description>
    <label>General Enquiry</label>
    <businessProcess>Catalyst_Support_Process</businessProcess>
</RecordType>