force-app/main/default/objects/Case/recordTypes/Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Onboarding</fullName>
    <active>true</active>
    <description>Onboarding cases — new customer setup, data migration assistance, and initial configuration.</description>
    <label>Onboarding</label>
    <businessProcess>Catalyst_Support_Process</businessProcess>
</RecordType>