force-app/main/default/objects/Case/recordTypes/Technical_Support.recordType-meta.xml
<RecordType>
    <fullName>Technical_Support</fullName>
    <active>true</active>
    <description>Technical support cases — product bugs, integration issues, and platform errors.</description>
    <label>Technical Support</label>
    <businessProcess>Catalyst_Support_Process</businessProcess>
</RecordType>