force-app/main/default/objects/Case/validationRules/Case_CSATGate.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_CSATGate</fullName>
    <active>true</active>
    <description>Prevents closing a case until the CSAT survey has been dispatched. CSAT_Sent__c is set by the post-resolution survey flow. Ensures survey response data completeness for health score. Req: MKT-REQ-SRVC-006.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp; CSAT_Sent__c = FALSE</errorConditionFormula>
    <errorMessage>Please send the CSAT survey before closing this case.</errorMessage>
</ValidationRule>