force-app/main/default/objects/Case/validationRules/Case_ResolutionSummaryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_ResolutionSummaryRequired</fullName>
    <active>true</active>
    <description>Enforces that a Resolution Summary is completed before setting case Status to Resolved. Ensures knowledge capture and SLA reporting completeness. Req: MKT-REQ-SRVC-005.</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Resolved&apos;) &amp;&amp; ISBLANK(Resolution_Summary__c)</errorConditionFormula>
    <errorMessage>A Resolution Summary is required before setting a case to Resolved.</errorMessage>
</ValidationRule>